# tinyscript

./: CMakeLists.txt  bind.c  example.txt  hello.txt  tsmod_template.c
dependencies/parse_args/: parse_args.h
dependencies/tokenfactory/: ast.c  tokenbuffer.c  tokenfactory.c  tokenfactory.h
include/: tinyapi.h  tsval.h
modules/OpenGL/: module_OpenGL.c
modules/SDL/: module_SDL.c
src/: parse.c  parse.h  tinyscript.c  tsval.c
